# ui-workflow-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.planning/: ROADMAP.md  STATE.md
.planning/phases/02-support-more-web-elements/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-RESEARCH.md  02-REVIEW.md  02-VERIFICATION.md
configs/: env.dev.yaml  env.prod.yaml  env.qa.yaml
project/: Support-dynamic-placeholder-expansion.md
src/actions/: action_factory.py  element_actions.py  value_resolver.py
src/core/: config.py  constants.py  enums.py  exceptions.py  logger.py
src/data/: json_loader.py  validators.py
src/driver/: driver_factory.py  driver_manager.py
src/locators/: locator_resolver.py
src/models/: element_models.py  workflow_models.py
src/ui/: base_component.py  base_page.py
src/utils/: files.py  screenshots.py  strings.py
src/waits/: ajax_monitor.py  expected_states.py  page_readiness.py  wait_manager.py
src/workflow/: execution_context.py  navigator.py  result_collector.py  workflow_engine.py
testdata/workflows/: nested_ref_workflow.json  onboarding_workflow.json  sample_workflow.json
tests/: conftest.py
tests/smoke/: test_sample_workflow.py
tests/unit/: test_action_dispatch.py  test_app_config.py  test_base_page_select_radio.py  test_base_page_window.py  test_driver_factory.py  test_driver_manager.py  test_json_loader.py  test_locator_resolver.py  test_result_collector.py  test_validators.py  test_value_resolver.py  test_workflow_models.py
(+28 files in other folders)
