[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ui-workflow-automation"
version = "0.1.0"
description = "Data-driven Selenium workflow automation framework"
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.15.0",
    "pytest>=7.4.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "webdriver-manager>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: end-to-end tests requiring a real browser",
    "unit: unit tests with no browser dependency",
    "slow: tests that take more than a few seconds",
]
